[gd_scene load_steps=16 format=2]

[ext_resource path="res://src/gui/menus/facility/manage/ResourceSlider.tscn" type="PackedScene" id=1]
[ext_resource path="res://src/gui/menus/facility/manage/StatDetails.tscn" type="PackedScene" id=2]
[ext_resource path="res://src/gui/menus/facility/manage/facility_screen.gd" type="Script" id=3]
[ext_resource path="res://assets/fonts/dogicapixel.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://assets/gfx/ui_elements/status_indicators.png" type="Texture" id=5]
[ext_resource path="res://src/gui/menus/reusable/menu_tooltip_proxy.gd" type="Script" id=6]

[sub_resource type="DynamicFont" id=1]
size = 10
font_data = ExtResource( 4 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 5 )
region = Rect2( 0, 256, 128, 128 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 5 )
region = Rect2( 128, 256, 128, 128 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 5 )
region = Rect2( 0, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 5 )
region = Rect2( 128, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 5 )
region = Rect2( 0, 384, 128, 128 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 5 )
region = Rect2( 0, 128, 128, 128 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 5 )
region = Rect2( 128, 128, 128, 128 )

[sub_resource type="SpriteFrames" id=3]
animations = [ {
"frames": [ SubResource( 6 ), SubResource( 7 ) ],
"loop": true,
"name": "full",
"speed": 2.0
}, {
"frames": [ SubResource( 4 ), SubResource( 5 ) ],
"loop": true,
"name": "no_fuel",
"speed": 2.0
}, {
"frames": [ SubResource( 2 ) ],
"loop": true,
"name": "ok",
"speed": 5.0
}, {
"frames": [ SubResource( 8 ), SubResource( 9 ) ],
"loop": true,
"name": "wrecked",
"speed": 2.0
} ]

[node name="FacilityScreen" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 8
custom_constants/margin_top = 8
custom_constants/margin_left = 8
custom_constants/margin_bottom = 8

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
margin_left = 8.0
margin_top = 8.0
margin_right = 1016.0
margin_bottom = 592.0
rect_clip_content = true
size_flags_vertical = 3

[node name="DetailContainer" type="PanelContainer" parent="MarginContainer/HBoxContainer"]
margin_right = 336.0
margin_bottom = 584.0

[node name="FlavourDetail" type="VBoxContainer" parent="MarginContainer/HBoxContainer/DetailContainer"]
margin_left = 8.0
margin_top = 8.0
margin_right = 328.0
margin_bottom = 576.0
size_flags_horizontal = 3

[node name="Name" type="Label" parent="MarginContainer/HBoxContainer/DetailContainer/FlavourDetail"]
margin_right = 320.0
margin_bottom = 12.0

[node name="Art" type="TextureRect" parent="MarginContainer/HBoxContainer/DetailContainer/FlavourDetail"]
margin_top = 16.0
margin_right = 320.0
margin_bottom = 216.0
rect_min_size = Vector2( 320, 200 )
expand = true
stretch_mode = 1

[node name="ScrollContainer" type="ScrollContainer" parent="MarginContainer/HBoxContainer/DetailContainer/FlavourDetail"]
margin_top = 220.0
margin_right = 320.0
margin_bottom = 568.0
size_flags_vertical = 3
scroll_horizontal_enabled = false

[node name="FlavourText" type="Label" parent="MarginContainer/HBoxContainer/DetailContainer/FlavourDetail/ScrollContainer"]
margin_right = 320.0
margin_bottom = 348.0
size_flags_horizontal = 3
size_flags_vertical = 7
custom_fonts/font = SubResource( 1 )
autowrap = true

[node name="AbandonedPanel" type="PanelContainer" parent="MarginContainer/HBoxContainer"]
visible = false
margin_left = 340.0
margin_right = 658.0
margin_bottom = 584.0
size_flags_horizontal = 3

[node name="Rebuild" type="Button" parent="MarginContainer/HBoxContainer/AbandonedPanel"]
margin_left = 95.0
margin_top = 244.0
margin_right = 223.0
margin_bottom = 340.0
rect_min_size = Vector2( 128, 96 )
size_flags_horizontal = 4
size_flags_vertical = 4
text = "Rebuild"

[node name="StatsScreen" type="VBoxContainer" parent="MarginContainer/HBoxContainer"]
margin_left = 340.0
margin_right = 1008.0
margin_bottom = 584.0
size_flags_horizontal = 3

[node name="PanelContainer" type="PanelContainer" parent="MarginContainer/HBoxContainer/StatsScreen"]
margin_right = 668.0
margin_bottom = 144.0

[node name="IntegrityRow" type="HBoxContainer" parent="MarginContainer/HBoxContainer/StatsScreen/PanelContainer"]
margin_left = 8.0
margin_top = 8.0
margin_right = 660.0
margin_bottom = 136.0

[node name="VBoxContainer2" type="VBoxContainer" parent="MarginContainer/HBoxContainer/StatsScreen/PanelContainer/IntegrityRow"]
margin_right = 520.0
margin_bottom = 128.0
size_flags_horizontal = 3

[node name="Label" type="Label" parent="MarginContainer/HBoxContainer/StatsScreen/PanelContainer/IntegrityRow/VBoxContainer2"]
margin_right = 520.0
margin_bottom = 12.0
text = "Integrity"

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/HBoxContainer/StatsScreen/PanelContainer/IntegrityRow/VBoxContainer2"]
margin_top = 16.0
margin_right = 520.0
margin_bottom = 128.0
size_flags_vertical = 3
custom_constants/margin_right = 4
custom_constants/margin_left = 4

[node name="HealthDetails" parent="MarginContainer/HBoxContainer/StatsScreen/PanelContainer/IntegrityRow/VBoxContainer2/MarginContainer" instance=ExtResource( 2 )]
margin_left = 4.0
margin_top = 30.0
margin_right = 516.0
margin_bottom = 82.0
size_flags_vertical = 4

[node name="PanelContainer" type="PanelContainer" parent="MarginContainer/HBoxContainer/StatsScreen/PanelContainer/IntegrityRow"]
margin_left = 524.0
margin_right = 652.0
margin_bottom = 128.0
rect_min_size = Vector2( 128, 128 )
size_flags_vertical = 3

[node name="StatusTooltip" type="Control" parent="MarginContainer/HBoxContainer/StatsScreen/PanelContainer/IntegrityRow/PanelContainer"]
margin_left = 8.0
margin_top = 8.0
margin_right = 120.0
margin_bottom = 120.0
script = ExtResource( 6 )

[node name="Status" type="AnimatedSprite" parent="MarginContainer/HBoxContainer/StatsScreen/PanelContainer/IntegrityRow/PanelContainer"]
position = Vector2( 64, 64 )
frames = SubResource( 3 )
animation = "ok"
playing = true

[node name="ResourcesRow" type="HBoxContainer" parent="MarginContainer/HBoxContainer/StatsScreen"]
margin_top = 148.0
margin_right = 668.0
margin_bottom = 584.0
size_flags_vertical = 3

[node name="FuelContainer" type="PanelContainer" parent="MarginContainer/HBoxContainer/StatsScreen/ResourcesRow"]
margin_right = 332.0
margin_bottom = 436.0
size_flags_horizontal = 3

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/HBoxContainer/StatsScreen/ResourcesRow/FuelContainer"]
margin_left = 8.0
margin_top = 8.0
margin_right = 324.0
margin_bottom = 428.0

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/HBoxContainer/StatsScreen/ResourcesRow/FuelContainer/VBoxContainer"]
margin_right = 316.0
margin_bottom = 12.0

[node name="Label" type="Label" parent="MarginContainer/HBoxContainer/StatsScreen/ResourcesRow/FuelContainer/VBoxContainer/HBoxContainer"]
margin_right = 156.0
margin_bottom = 12.0
size_flags_horizontal = 3
text = "Fuel"
align = 1

[node name="ConsumptionRate" type="Label" parent="MarginContainer/HBoxContainer/StatsScreen/ResourcesRow/FuelContainer/VBoxContainer/HBoxContainer"]
margin_left = 160.0
margin_right = 316.0
margin_bottom = 12.0
size_flags_horizontal = 3
align = 1

[node name="ScrollContainer" type="ScrollContainer" parent="MarginContainer/HBoxContainer/StatsScreen/ResourcesRow/FuelContainer/VBoxContainer"]
margin_top = 16.0
margin_right = 316.0
margin_bottom = 420.0
size_flags_horizontal = 3
size_flags_vertical = 3
scroll_horizontal_enabled = false

[node name="FuelList" type="VBoxContainer" parent="MarginContainer/HBoxContainer/StatsScreen/ResourcesRow/FuelContainer/VBoxContainer/ScrollContainer"]
margin_right = 316.0
margin_bottom = 404.0
rect_clip_content = true
size_flags_horizontal = 3
size_flags_vertical = 3
alignment = 1

[node name="ProductContainer" type="PanelContainer" parent="MarginContainer/HBoxContainer/StatsScreen/ResourcesRow"]
margin_left = 336.0
margin_right = 668.0
margin_bottom = 436.0
size_flags_horizontal = 3

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/HBoxContainer/StatsScreen/ResourcesRow/ProductContainer"]
margin_left = 8.0
margin_top = 8.0
margin_right = 324.0
margin_bottom = 428.0

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/HBoxContainer/StatsScreen/ResourcesRow/ProductContainer/VBoxContainer"]
margin_right = 316.0
margin_bottom = 12.0

[node name="Label" type="Label" parent="MarginContainer/HBoxContainer/StatsScreen/ResourcesRow/ProductContainer/VBoxContainer/HBoxContainer"]
margin_right = 156.0
margin_bottom = 12.0
size_flags_horizontal = 3
text = "Production"
align = 1

[node name="ProductionRate" type="Label" parent="MarginContainer/HBoxContainer/StatsScreen/ResourcesRow/ProductContainer/VBoxContainer/HBoxContainer"]
margin_left = 160.0
margin_right = 316.0
margin_bottom = 12.0
size_flags_horizontal = 3
align = 1

[node name="ScrollContainer" type="ScrollContainer" parent="MarginContainer/HBoxContainer/StatsScreen/ResourcesRow/ProductContainer/VBoxContainer"]
margin_top = 16.0
margin_right = 316.0
margin_bottom = 420.0
size_flags_horizontal = 3
size_flags_vertical = 3
scroll_horizontal_enabled = false

[node name="ProdList" type="VBoxContainer" parent="MarginContainer/HBoxContainer/StatsScreen/ResourcesRow/ProductContainer/VBoxContainer/ScrollContainer"]
margin_right = 316.0
margin_bottom = 404.0
rect_clip_content = true
size_flags_horizontal = 3
size_flags_vertical = 3
alignment = 1

[node name="ResourceSlider" parent="." instance=ExtResource( 1 )]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -144.0
margin_top = -113.0
margin_right = 144.0
margin_bottom = 113.0

[connection signal="pressed" from="MarginContainer/HBoxContainer/AbandonedPanel/Rebuild" to="." method="_on_Rebuild_pressed"]
[connection signal="value_chosen" from="ResourceSlider" to="." method="_on_ResourceSlider_value_chosen"]
